@@ -97,7 +97,7 @@
 #define AIM_CB_MSG_INCOMING 0x0007
 #define AIM_CB_MSG_EVIL 0x0009
 #define AIM_CB_MSG_MISSEDCALL 0x000a
-#define AIM_CB_MSG_CLIENTERROR 0x000b
+#define AIM_CB_MSG_CLIENTAUTORESP 0x000b
 #define AIM_CB_MSG_ACK 0x000c
 #define AIM_CB_MSG_DEFAULT 0xffff
 
